ufw/before.rules
# KVM/libvirt Forward Ports to guests with Iptables (UFW) #
*nat
:PREROUTING ACCEPT [0:0]
-A PREROUTING -p tcp --dport 44331 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.2:443 -m comment --comment "FGT1"
-A PREROUTING -p tcp --dport 44332 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.2:22 -m comment --comment "FGT1 ssh"
-A PREROUTING -p tcp --dport 44334 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.2:44301 -m comment --comment "FGT1"
-A PREROUTING -p udp --dport 1812 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.240:1812 -m comment --comment "FAC radius"
-A PREROUTING -p tcp --dport 4433 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.3:4433 -m comment --comment "FGT2 FTM"
-A PREROUTING -p tcp --dport 4434 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.2:4434 -m comment --comment "FGT2 FTM"
-A PREROUTING -p udp --dport 514 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.47:514 -m comment --comment "FAZ logging"
-A PREROUTING -p tcp --dport 514 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.47:514 -m comment --comment "FAZ logging"
-A PREROUTING -p tcp --dport 44333 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.172:80 -m comment --comment "Truenas"
-A PREROUTING -p tcp --dport 222 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.172:22 -m comment --comment "Truenas"
-A PREROUTING -p tcp --dport 9096 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.172:9096 -m comment --comment "Truenas Emby"
-A PREROUTING -p tcp --dport 30024 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.172:30024 -m comment --comment "Truenas qbittorrent"
-A PREROUTING -p tcp --dport 445 -j DNAT -d 10.50.50.136 --to-destination 192.168.122.172:445 -m comment --comment "Truenas smb"
COMMIT
#
##
# rules.before
#
# Rules that should be run before the ufw command line added rules. Custom
# rules should be added to one of these chains:
#   ufw-before-input
#   ufw-before-output
#   ufw-before-forward
#

# Don't delete these required lines, otherwise there will be errors
*filter
:ufw-before-input - [0:0]
:ufw-before-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-not-local - [0:0]
# End required lines


# allow all on loopback
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-output -o lo -j ACCEPT

# quickly process packets for which we already have a connection
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# drop INVALID packets (logs these in loglevel medium and higher)
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP

# ok icmp codes for INPUT
-A ufw-before-input -p icmp --icmp-type destination-unreachable -j ACCEPT
-A ufw-before-input -p icmp --icmp-type time-exceeded -j ACCEPT
-A ufw-before-input -p icmp --icmp-type parameter-problem -j ACCEPT
-A ufw-before-input -p icmp --icmp-type echo-request -j ACCEPT

# ok icmp code for FORWARD
-A ufw-before-forward -p icmp --icmp-type destination-unreachable -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type time-exceeded -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type parameter-problem -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type echo-request -j ACCEPT

# allow dhcp client to work
-A ufw-before-input -p udp --sport 67 --dport 68 -j ACCEPT

#
# ufw-not-local
#
-A ufw-before-input -j ufw-not-local

# if LOCAL, RETURN
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN

# if MULTICAST, RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN

# if BROADCAST, RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN

# all other non-local packets are dropped
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP

# allow MULTICAST mDNS for service discovery (be sure the MULTICAST line above
# is uncommented)
-A ufw-before-input -p udp -d 224.0.0.251 --dport 5353 -j ACCEPT

# allow MULTICAST UPnP for service discovery (be sure the MULTICAST line above
# is uncommented)
-A ufw-before-input -p udp -d 239.255.255.250 --dport 1900 -j ACCEPT

# don't delete the 'COMMIT' line or these rules won't be processed
COMMIT
